feat(project): setup swagger
